# ritma-utl

./: .dockerignore  .gitignore  404.html  CNAME  Cargo.toml  FIXES_SUMMARY.md  Makefile  NOTICE  PILOT_READY_FIXES.md  README.md  README_PILOT_READY.md  RITMA_INFRASTRUCTURE_CCTV_ROADMAP.md  SECURITY.md  checklist.md  compliance_index.jsonl  decision_events.jsonl  deny.toml  dig_index.jsonl  dig_index.sqlite  index.html  install.sh  mkdocs.yml  policy_ledger.jsonl  policy_ledger.jsonl.head  search.html  sitemap.xml
.cargo/: audit.toml
ARCHITECTURE/: index.html
CLI_REFERENCE/: index.html
EEC_SPEC/: index.html
RTSL_SPEC/: index.html
SDK/: index.html
crates/attack_graph/: Cargo.toml
crates/attack_graph/src/: lib.rs
crates/bar_config/: Cargo.toml
crates/bar_config/src/: lib.rs
crates/bar_orchestrator/: Cargo.toml
crates/bar_orchestrator/src/: lib.rs  main.rs
crates/bar_pipeline/: Cargo.toml
crates/bar_pipeline/src/: lib.rs
crates/billing_daemon/: Cargo.toml
crates/billing_daemon/src/: main.rs
crates/compliance_console_api/: Cargo.toml
crates/compliance_console_api/src/: main.rs
crates/compliance_packs/: Cargo.toml
crates/compliance_packs/src/: lib.rs
crates/container_hooks/: Cargo.toml
crates/container_hooks/src/: lib.rs
crates/dig_index/: Cargo.toml
crates/dig_index/src/: lib.rs  query.rs
crates/dig_index/tests/: dig_index_append_tests.rs
crates/dig_mem/: Cargo.toml
crates/dig_mem/src/: lib.rs  log_camera.rs
crates/dig_mem/tests/: dig_mem_evidence_tests.rs
crates/distributed_consensus/: Cargo.toml
crates/distributed_consensus/src/: lib.rs
crates/ebpf_provider/: Cargo.toml
crates/ebpf_provider/src/: lib.rs
crates/evidence_package/: Cargo.toml
crates/evidence_package/src/: builder.rs  lib.rs  manifest.rs  signer.rs  verifier.rs
crates/fileless_detector/: Cargo.toml  README.md
crates/fileless_detector/src/: ebpf_hooks.rs  lib.rs
crates/forensic_ml/: Cargo.toml
crates/forensic_ml/src/: layer_a.rs  layer_b.rs  layer_c.rs  layer_d.rs  lib.rs  notary.rs
crates/index_db/: Cargo.toml
crates/index_db/src/: lib.rs
crates/k8s_admission/: Cargo.toml
crates/k8s_admission/src/: lib.rs
crates/middleware_adapters/: Cargo.toml
crates/middleware_adapters/src/: lib.rs
crates/ml_anomaly/: Cargo.toml
crates/ml_anomaly/src/: lib.rs
crates/ml_detector/: Cargo.toml  README.md
crates/ml_detector/src/: lib.rs
crates/node_controller_api/: Cargo.toml
crates/node_controller_api/src/: main.rs
crates/node_keystore/: Cargo.toml
crates/node_keystore/src/: lib.rs  tpm.rs
crates/proof_standards/: Cargo.toml
crates/proof_standards/src/: lib.rs
crates/redis_queue/: Cargo.toml
crates/redis_queue/src/: lib.rs
crates/ritma/: Cargo.toml
crates/ritma/src/: demo.rs  main.rs
crates/ritma/src/commands/: config.rs  events.rs  init.rs  intent.rs  mod.rs  proof.rs  status.rs  verdicts.rs
crates/ritma_cli/: Cargo.toml
crates/ritma_cli/debian/: ritma-sidecar.service  ritma.conf
crates/ritma_cli/src/: enhanced_demo.rs  main.rs  validate.rs
crates/ritma_cloud/: Cargo.toml
crates/ritma_cloud/src/: main.rs
crates/ritma_contract/: Cargo.toml
crates/ritma_contract/src/: accounting.rs  ai_audit.rs  alerting.rs  anchors.rs  canonical.rs  cas.rs  cases.rs  catalog.rs  cctv.rs  coldstore.rs  cose.rs  ctgf.rs  dictionary.rs  ebpf.rs  graph.rs  hazard.rs  investigation.rs  k8s_metadata.rs  l7_tracing.rs  lib.rs  merkle_advanced.rs  migration.rs  pipeline.rs  process_lifecycle.rs  proofpack.rs  provenance.rs  readiness.rs  replay.rs  rtsl.rs  siem_export.rs  timejump.rs  timestamping.rs  tracing_policy.rs  triggers.rs  tsa.rs  verify.rs  versioning.rs
crates/security_host/: Cargo.toml
crates/security_host/src/: main.rs
creat/: arch.md  checklist.md  forensics.md  hardening_plan.md  preplanning.md  prod_plan.md  threat_model.md  usecase_checklist.md
cue/: events.cue  tenant_lawbook.cue  truthscript.cue
demo/: ADVANCED_DEMO.md  README.md  SAFETY_MIN_DOCS.md  advanced_demo.sh  advanced_report.txt  artifact_first_demo.sh  evidence.package.json  policy.access.demo.json  slo_events.demo.jsonl  soc2.controls.json  test_fixes.sh  truth_snapshot.export.json
deploy/: README.md
dig/: root-100_file-159650606708718527730144262056591574462_1764632657.dig.json  root-100_file-270858057549870712824830607497215506896_1764632657.dig.json  root-100_file-4445172127948728048199112165940215136_1764634724.dig.json  root-100_file-81394714553280362207656901172951464532_1764634723.dig.json  root-200_file-114436270570099957297657407870919328001_1764634726.dig.json  root-200_file-121182342702409852124971037378619583051_1764632660.dig.json  root-200_file-184215846640630397844883294181010166426_1764634726.dig.json  root-200_file-195389080345220553377039293374315617897_1764632662.dig.json  root-200_file-208948539780427040106561548851098931541_1764634726.dig.json  root-200_file-216529635219911798739199373043061095032_1764634727.dig.json  root-200_file-219358350489298064120893352412300202457_1764634727.dig.json  root-200_file-228814046471470968207177136399356778002_1764634727.dig.json  root-200_file-234159858427640948057276815637099645469_1764634725.dig.json  root-200_file-251498858476540844278646812079755757803_1764634724.dig.json  root-200_file-256383106040846526477120219939516903655_1764634724.dig.json  root-200_file-279050208696361246228385959957159807428_1764634725.dig.json  root-200_file-299329401740329786572036799210488499232_1764632661.dig.json  root-200_file-317635695058602229643591291066743123711_1764634726.dig.json  root-200_file-318593677689143112019180137107853479360_1764632661.dig.json  root-200_file-329314975911691176634924327459080045858_1764634725.dig.json  root-200_file-331045776222470054392198875139106724131_1764632658.dig.json  root-200_file-335711406250320333825106397374636924617_1764632659.dig.json  root-200_file-34133930779369233001969431628358692731_1764632660.dig.json  root-200_file-4436081621099425852613085889028784076_1764632658.dig.json  root-200_file-54557362185726036547454130492807229434_1764632658.dig.json  (+43 more)
(+381 files in other folders)
