[workspace]
resolver = "2"
members = [
    "crates/core_types",
    "crates/sot_root",
    "crates/clock",
    "crates/handshake",
    "crates/tata",
    "crates/dig_mem",
    "crates/utld",
    "crates/entropy_tree",
    "crates/tracer",
    "crates/distillium",
    "crates/trust_container",
    "crates/truthscript",
    "crates/policy_engine",
    "crates/zk_snark",
    "crates/utl_client",
    "crates/utl_cli",
    "crates/utl_http",
    "crates/tenant_policy",
    "crates/security_os",
    "crates/security_tools",
    "crates/dig_index",
    "crates/utl_forensics",
    "crates/forensics_store",
    "crates/security_events",
    "crates/security_host",
    "crates/utl_cue",
    "crates/biz_api",
]
