[workspace]
resolver = "2"
members = [
    "crates/core_types",
    "crates/sot_root",
    "crates/clock",
    "crates/handshake",
    "crates/tata",
    "crates/dig_mem",
    "crates/utld",
    "crates/entropy_tree",
    "crates/tracer",
    "crates/distillium",
    "crates/trust_container",
    "crates/truthscript",
    "crates/policy_engine",
    "crates/zk_snark",
    "crates/utl_client",
    "crates/utl_core",
    "crates/utl_cli",
    "crates/utl_http",
    "crates/tenant_policy",
    "crates/security_os",
    "crates/security_tools",
    "crates/dig_index",
    "crates/utl_forensics",
    "crates/forensics_store",
    "crates/security_events",
    "crates/security_host",
    "crates/utl_cue",
    "crates/ritma_contract",
    "crates/biz_api",
    "crates/policy_store",
    "crates/compliance_model",
    "crates/compliance_engine",
    "crates/compliance_index",
    "crates/compliance_rulepacks",
    "crates/svc_ledger",
    "crates/security_kit",
    "crates/node_keystore",
    "crates/evidence_package",
    "crates/common_models",
    "crates/ritma_cloud",
    "crates/billing_daemon",
    "crates/payment_client",
    "crates/compliance_console_api",
    "crates/node_controller_api",
    "crates/bar_core",
    "crates/bar_daemon",
    "crates/ritma_cli",
    "crates/ritma_demo_workload",
    "crates/bar_client",
    "crates/index_db",
    "crates/bar_powers",
    "crates/bar_pipeline",
    "crates/namespaces",
    "crates/contracts",
    "crates/cyber_funnel",
    "crates/redis_queue",
    "crates/intent_power",
    "crates/proof_standards",
    "crates/middleware_adapters",
    "crates/bar_config",
    "crates/threat_detection",
    "crates/compliance_packs",
    "crates/security_interfaces",
    "crates/ml_runner",
    "crates/bar_orchestrator",
    "crates/tracer_sidecar",
    "crates/ritma",
    "crates/window_summarizer",
    "crates/attack_graph",
    "crates/snapshotter",
    "crates/trust_hardening",
    "crates/judge_contracts",
    "crates/privacy_engine",
    "crates/ebpf_provider",
    "crates/observability",
    "crates/fileless_detector",
    "crates/ebpf_hardening",
    "crates/apt_tracker",
    "crates/container_security",
    "crates/memory_forensics",
    "crates/network_analysis",
    "crates/hardware_monitor",
    "crates/ml_detector",
    "tests/integration",
]

 default-members = [
     "crates/ritma_cli",
     "tests/integration",
 ]
