[workspace]
resolver = "2"
members = [
    # Core types and utilities
    "crates/core_types",
    "crates/clock",
    "crates/common_models",
    
    # Security and forensics core
    "crates/security_interfaces",
    "crates/security_events",
    "crates/security_kit",
    "crates/security_os",
    "crates/security_tools",
    "crates/security_host",
    
    # Index and storage
    "crates/index_db",
    "crates/ritma_contract",
    "crates/forensics_store",
    "crates/evidence_package",
    "crates/node_keystore",
    
    # BAR pipeline
    "crates/bar_core",
    "crates/bar_config",
    "crates/bar_pipeline",
    "crates/bar_powers",
    "crates/bar_orchestrator",
    "crates/bar_daemon",
    "crates/bar_client",
    
    # ML and detection
    "crates/ml_runner",
    "crates/ml_anomaly",
    "crates/ml_detector",
    "crates/forensic_ml",
    "crates/threat_detection",
    "crates/attack_graph",
    "crates/fileless_detector",
    "crates/apt_tracker",
    
    # Policy and compliance
    "crates/policy_engine",
    "crates/policy_store",
    "crates/compliance_model",
    "crates/compliance_engine",
    "crates/compliance_index",
    "crates/compliance_packs",
    "crates/compliance_rulepacks",
    "crates/tenant_policy",
    "crates/judge_contracts",
    "crates/proof_standards",
    
    # Tracing and capture
    "crates/tracer",
    "crates/tracer_sidecar",
    "crates/snapshotter",
    "crates/window_summarizer",
    "crates/ebpf_provider",
    "crates/ebpf_hardening",
    "crates/xdp_capture",
    "crates/observability",
    
    # Container and K8s
    "crates/container_security",
    "crates/container_hooks",
    "crates/k8s_admission",
    
    # Advanced forensics
    "crates/memory_forensics",
    "crates/network_analysis",
    "crates/hardware_monitor",
    "crates/privacy_engine",
    "crates/time_travel",
    
    # Infrastructure
    "crates/namespaces",
    "crates/contracts",
    "crates/cyber_funnel",
    "crates/intent_power",
    "crates/middleware_adapters",
    "crates/distributed_consensus",
    "crates/trust_hardening",
    "crates/trust_container",
    
    # Legacy/UTL (keep for now)
    "crates/sot_root",
    "crates/handshake",
    "crates/tata",
    "crates/dig_mem",
    "crates/dig_index",
    "crates/entropy_tree",
    "crates/distillium",
    "crates/truthscript",
    "crates/zk_snark",
    "crates/utl_forensics",
    "crates/svc_ledger",
    
    # CLI and demo
    "crates/ritma_cli",
    "crates/ritma",
    "crates/ritma_demo_workload",
    
    # Tests
    "tests/integration",
]

# Removed (UI/billing/cloud - not needed for core):
# - billing_daemon
# - payment_client  
# - ritma_cloud
# - compliance_console_api
# - node_controller_api
# - biz_api
# - utld
# - utl_client
# - utl_cli
# - utl_http
# - utl_cue
# - redis_queue

 default-members = [
     "crates/ritma_cli",
     "tests/integration",
 ]
