[package]
name = "attack_graph"
version = "0.1.0"
edition = "2021"


license = "Apache-2.0"

[dependencies]
common_models = { path = "../common_models" }
index_db = { path = "../index_db" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
