[package]
name = "bar_config"
version = "0.1.0"
edition = "2021"

[dependencies]
common_models = { path = "../common_models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
chrono = "0.4"

# JSON Schema validation
jsonschema = "0.18"
