[package]
name = "compliance_console_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
compliance_model = { path = "../compliance_model" }
compliance_engine = { path = "../compliance_engine" }
compliance_index = { path = "../compliance_index" }
compliance_rulepacks = { path = "../compliance_rulepacks" }
svc_ledger = { path = "../svc_ledger" }
core_types = { path = "../core_types" }
dig_index = { path = "../dig_index" }
security_kit = { path = "../security_kit" }
jsonwebtoken = "8"
tower-http = { version = "0.5", features = ["cors"] }
