[package]
name = "compliance_packs"
version = "0.1.0"
edition = "2021"


license = "Apache-2.0"

[dependencies]
common_models = { path = "../common_models" }
proof_standards = { path = "../proof_standards" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
