[package]
name = "dig_index"
version = "0.1.0"
edition = "2021"


license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
core_types = { path = "../core_types" }
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"
