[package]
name = "dig_mem"
version = "0.1.0"
edition = "2021"


license = "Apache-2.0"

[dependencies]
core_types = { path = "../core_types" }
clock = { path = "../clock" }
tata = { path = "../tata" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rs_merkle = "0.1"

[dev-dependencies]
tempfile = "3"
