[package]
name = "distributed_consensus"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Distributed consensus for Ritma audit log replication"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
ciborium = "0.2"
