[package]
name = "evidence_package"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
ed25519-dalek = { version = "2.0", features = ["serde"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

# Internal deps
core_types = { path = "../core_types" }
dig_mem = { path = "../dig_mem" }
dig_index = { path = "../dig_index" }
compliance_index = { path = "../compliance_index" }
security_events = { path = "../security_events" }

[dev-dependencies]
tempfile = "3.8"
