[package]
name = "fileless_detector"
version = "0.1.0"
edition = "2021"


license = "Apache-2.0"

[dependencies]
common_models = { path = "../common_models" }
ebpf_hardening = { path = "../ebpf_hardening" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
log = "0.4"
thiserror = "1.0"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
