[package]
name = "forensic_ml"
version = "0.1.0"
edition = "2021"
description = "Military-grade Forensic ML with explainable, auditable inference for Ritma BAR"
license = "Apache-2.0"

[dependencies]
common_models = { path = "../common_models" }
ml_anomaly = { path = "../ml_anomaly" }
policy_engine = { path = "../policy_engine" }
node_keystore = { path = "../node_keystore" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
ciborium = "0.2"
thiserror = "2.0"

[dev-dependencies]
rand = "0.8"
