[package]
name = "index_db"
version = "0.1.0"
edition = "2021"


license = "Apache-2.0"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
common_models = { path = "../common_models" }
chrono = { version = "0.4", features = ["serde"] }
ciborium = "0.2"

[dev-dependencies]
tempfile = "3"
