[package]
name = "k8s_admission"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Kubernetes admission controller webhooks for Ritma"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
