[package]
name = "middleware_adapters"
version = "0.1.0"
edition = "2021"


license = "Apache-2.0"

[dependencies]
common_models = { path = "../common_models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

# HTTP adapter dependencies
http = "1"
hyper = { version = "1", features = ["full"], optional = true }

# OTEL adapter dependencies (optional)
opentelemetry = { version = "0.21", optional = true }
opentelemetry_sdk = { version = "0.21", optional = true }

[features]
default = []
http_adapter = ["hyper"]
otel_adapter = ["opentelemetry", "opentelemetry_sdk"]
