[package]
name = "node_keystore"
version = "0.1.0"
edition = "2021"


license = "Apache-2.0"

[dependencies]
ed25519-dalek = "2.0"
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
zeroize = { version = "1.8", features = ["derive"] }
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
