[package]
name = "proof_standards"
version = "0.1.0"
edition = "2021"

[dependencies]
common_models = { path = "../common_models" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }

# Optional zkSNARK backend dependencies
# These would be actual zkSNARK libraries in production
# For now, we'll create trait-based interfaces that can be implemented
[features]
default = []
zksnark = []
distillium = []
