[package]
name = "ritma_cli"
version = "0.1.0"
edition = "2021"
description = "Ritma - Court-grade forensic security observability platform"
authors = ["Ritma Team <team@ritma.io>"]
homepage = "https://ritma.io"
repository = "https://github.com/ritma-io/ritma"
license = "Apache-2.0"
readme = "../../README.md"
keywords = ["security", "forensics", "observability", "compliance", "audit"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.deb]
name = "ritma"
maintainer = "Ritma Team <team@ritma.io>"
copyright = "2024-2026, Ritma Inc."
license-file = ["../../LICENSE", "0"]
extended-description = """\
Ritma is a court-grade forensic security observability platform that provides:
- Real-time eBPF-based system tracing
- Forensic ML with explainable verdicts  
- Merkle-sealed evidence chains
- RTSL (Ritma Transparency Security Log) proofpacks
- Compliance automation (PIPEDA, SOX, HIPAA, PCI-DSS)
"""
depends = "$auto, libc6"
section = "admin"
priority = "optional"
assets = [
    ["target/release/ritma", "usr/bin/", "755"],
    ["target/release/tracer_sidecar", "usr/bin/ritma-sidecar", "755"],
    ["../../scripts/demo.sh", "usr/bin/ritma-demo", "755"],
    ["../../README.md", "usr/share/doc/ritma/README.md", "644"],
    ["../../docs/ritma_transparency_forensics.md", "usr/share/doc/ritma/forensics-spec.md", "644"],
    ["debian/ritma-sidecar.service", "lib/systemd/system/", "644"],
    ["debian/ritma.conf", "etc/ritma/", "644"],
]
conf-files = ["/etc/ritma/ritma.conf"]
systemd-units = { unit-name = "ritma-sidecar", enable = false }

[[bin]]
name = "ritma"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dig_mem = { path = "../dig_mem" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"
zstd = "0.13"
blake3 = "1"
evidence_package = { path = "../evidence_package" }
node_keystore = { path = "../node_keystore" }
ritma_contract = { path = "../ritma_contract" }
bar_core = { path = "../bar_core" }
bar_client = { path = "../bar_client" }
index_db = { path = "../index_db" }
chrono = { version = "0.4", features = ["serde"] }
bar_orchestrator = { path = "../bar_orchestrator" }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
common_models = { path = "../common_models" }
security_interfaces = { path = "../security_interfaces" }
attack_graph = { path = "../attack_graph" }
snapshotter = { path = "../snapshotter" }
tiny_http = "0.12"
mime_guess = "2.0"
qrcode = { version = "0.12", features = ["image"] }
image = { version = "0.24", default-features = false, features = ["png"] }
hmac = "0.12"
ed25519-dalek = { version = "2.0", features = ["serde", "rand_core"] }
rand_core = "0.6"
zeroize = "1.8"

# Phase crates used by enhanced demo
fileless_detector = { path = "../fileless_detector" }
ebpf_hardening = { path = "../ebpf_hardening" }
apt_tracker = { path = "../apt_tracker" }
container_security = { path = "../container_security" }
memory_forensics = { path = "../memory_forensics" }
network_analysis = { path = "../network_analysis" }
hardware_monitor = { path = "../hardware_monitor" }
ml_detector = { path = "../ml_detector" }
