[package]
name = "ritma_cloud"
version = "0.1.0"
edition = "2021"


license = "Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"] }
dig_index = { path = "../dig_index" }
