[package]
name = "ritma_contract"
version = "0.1.0"
edition = "2021"

license = "Apache-2.0"

[dependencies]
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ciborium = "0.2"
chrono = "0.4"
zstd = "0.13"
sha2 = "0.10"
hex = "0.4"
blake3 = "1.5"
uuid = { version = "1", features = ["v4"] }
node_keystore = { path = "../node_keystore" }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
reqwest = { version = "0.11", features = ["blocking"], optional = true }
base64 = "0.21"

[dev-dependencies]
rand = "0.8"

[features]
default = []
tsa = ["reqwest"]
