[package]
name = "security_host"
version = "0.1.0"
edition = "2021"


license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
security_os = { path = "../security_os" }
security_events = { path = "../security_events" }
nix = { version = "0.27", default-features = false, features = ["mount", "sched", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[[bin]]
name = "ritma_firewall_helper"
path = "src/bin/ritma_firewall_helper.rs"

[[bin]]
name = "ritma_launch"
path = "src/bin/ritma_launch.rs"

[[bin]]
name = "ritma_ebpf_helper"
path = "src/bin/ritma_ebpf_helper.rs"

[[bin]]
name = "ritma_ip_registry"
path = "src/bin/ritma_ip_registry.rs"
